#c11 Prevent overflow by text editor in max mode

--- a/projects/net.splitcells.website.content.default/src/main/resources/html/net/splitcells/website/css/layout.pseudo.fullscreen.css
+++ b/projects/net.splitcells.website.content.default/src/main/resources/html/net/splitcells/website/css/layout.pseudo.fullscreen.css
@@ -5,7 +5,10 @@
     display: none;
     visibility: hidden;
     }
-@media (min-width: 59em) {
+@media (min-width: 53.25em) and (min-width: 59em) {
+    /* When only 2 columns are visible at any height,
+     * the meta column is only bound by the width of its parent.
+     */
     .column_1 {
         width: 100%;
         }
@@ -15,6 +18,23 @@
         width: 30em !important;
         flex-grow: 0;
         }
+    .net-splitcells-content-main {
+        flex-grow: 1;
+        max-width: calc(100% - 13.5em + 30em) !important;
+        }
+    .net-splitcells-content-column {
+        flex-grow: 1;
+        max-width: calc(100% - 13.5em + 30em) !important;
+    }
+    }
+@media (min-width: 59em) {
+    .net-splitcells-content-column {
+        /* When 3 columns are visible at any height, than this prevents,
+         * that a growing element inside the content column (like the Codemirror text editor)
+         * grows the content column bigger than its parent.
+         */
+        max-width: calc(100% - 13.5em + 30em) !important;
+        }
     }
 @media (max-width: 73.25em) {
     .column_1 {
@@ -22,7 +42,7 @@
         flex-grow: 0;
         }
     }
-@media (min-width: 59em) {
+@media (min-width: 59em) and (max-width: 99em) {
     .net-splitcells-content-main {
         flex-grow: 1;
         width: auto !important;
